- Changed Java 12 challenge - Changed pom